贯通工作流任务维度链 / connect workflow task dimension chain
将 workflow、durable blueprint 与 effect ledger 的维度和 NBT 边界迁到 Forge 1.12.2，保留快照兼容和值语义，并记录尚待外围服务闭合的真实边界。

Move workflow, durable blueprint, and effect-ledger dimension/NBT boundaries to Forge 1.12.2 while preserving snapshot compatibility and value semantics, with remaining service integration recorded explicitly.